src/objects/Apttus_Billing__Invoice__c/Apttus_Billing__Invoice__c.object-meta.xml
<CustomObject>
    <description>Represents an invoice associated with an account</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>