src/objects/Apttus_Billing__Invoice__c/fields/APTS_Billing_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>APTS_Billing_Document_Number__c</fullName>
    <description>Text field to capture the Billing Document Number.</description>
    <label>Billing Document Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>