src/objects/Apttus_Billing__Invoice__c/fields/APTS_DMR_Number__c.field-meta.xml
<CustomField>
    <fullName>APTS_DMR_Number__c</fullName>
    <label>DMR Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>