src/objects/Apttus_Billing__Invoice__c/fields/APTS_DMR_Status__c.field-meta.xml
<CustomField>
    <fullName>APTS_DMR_Status__c</fullName>
    <label>DMR Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>