src/objects/Apttus_Billing__Invoice__c/fields/APTS_Draft_AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>APTS_Draft_AttachmentId__c</fullName>
    <label>Draft AttachmentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>