src/objects/Apttus_Billing__Invoice__c/fields/APTS_Integration_Result__c.field-meta.xml
<CustomField>
    <fullName>APTS_Integration_Result__c</fullName>
    <label>Integration Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>