src/objects/Apttus_Billing__Invoice__c/fields/APTS_JIRA_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_JIRA_Transaction_Date__c</fullName>
    <label>JIRA Transaction Date</label>
    <type>DateTime</type>
</CustomField>