src/objects/Apttus_Billing__Invoice__c/fields/APTS_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>APTS_PO_Date__c</fullName>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>