src/objects/Apttus_Billing__Invoice__c/fields/APTS_SAP_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>APTS_SAP_Invoice_Number__c</fullName>
    <label>SAP Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>