src/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__PaymentTermId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentTermId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the payment term associated with the order</description>
    <inlineHelpText>ID of the payment term associated with the order</inlineHelpText>
    <label>Payment Term</label>
    <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>