src/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__SoldToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SoldToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the sold to account</description>
    <inlineHelpText>ID of the sold to account</inlineHelpText>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Sold To)</relationshipLabel>
    <relationshipName>InvoicesSoldTo</relationshipName>
    <type>Lookup</type>
</CustomField>