src/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__TotalInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalInvoiceAmount__c</fullName>
    <description>The total invoice amount</description>
    <inlineHelpText>The total invoice amount</inlineHelpText>
    <label>Total Invoice Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>