src/objects/Apttus_Billing__Invoice__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <label>Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIMS</fullName>
            </value>
            <value>
                <fullName>BMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>