src/objects/Apttus_Billing__Invoice__c/fields/Authorization_Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Reference_Code__c</fullName>
    <label>Authorization Reference Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>