src/objects/Apttus_Billing__Invoice__c/fields/BillTo_Number__c.field-meta.xml
<CustomField>
    <fullName>BillTo_Number__c</fullName>
    <label>BillTo Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>