src/objects/Apttus_Billing__Invoice__c/fields/BillTo_SAP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>BillTo_SAP_Account_Name__c</fullName>
    <label>BillTo SAP Account Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>