src/objects/Apttus_Billing__Invoice__c/fields/BillToXref_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>BillToXref_SAP_Number__c</fullName>
    <formula>Order_record__r.BillToXref__r.External_Account_ID__c</formula>
    <label>BillToXref SAP Number</label>
    <type>Text</type>
</CustomField>