src/objects/Apttus_Billing__Invoice__c/fields/Card_Token__c.field-meta.xml
<CustomField>
    <fullName>Card_Token__c</fullName>
    <label>Card Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>