src/objects/Apttus_Billing__Invoice__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>