src/objects/Apttus_Billing__Invoice__c/fields/CC_Amount__c.field-meta.xml
<CustomField>
    <fullName>CC_Amount__c</fullName>
    <label>CC Amount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>