src/objects/Apttus_Billing__Invoice__c/fields/ccauthorizationBlock__c.field-meta.xml
<CustomField>
    <fullName>ccauthorizationBlock__c</fullName>
    <label>ccauthorizationBlock</label>
    <length>18</length>
    <type>Text</type>
</CustomField>