src/objects/Apttus_Billing__Invoice__c/fields/ccauthRefNo__c.field-meta.xml
<CustomField>
    <fullName>ccauthRefNo__c</fullName>
    <label>ccauthRefNo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>