src/objects/Apttus_Billing__Invoice__c/fields/InternalsalesHdrInstrn__c.field-meta.xml
<CustomField>
    <fullName>InternalsalesHdrInstrn__c</fullName>
    <label>InternalsalesHdrInstrn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIMS Invoice</fullName>
            </value>
            <value>
                <fullName>BMS Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>