src/objects/Apttus_Billing__Invoice__c/fields/Is_License_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_License_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_License_Required</label>
    <type>Checkbox</type>
</CustomField>