src/objects/Apttus_Billing__Invoice__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>