src/objects/Apttus_Billing__Invoice__c/fields/SendToSAP__c.field-meta.xml
<CustomField>
    <fullName>SendToSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendToSAP</label>
    <type>Checkbox</type>
</CustomField>