src/objects/Apttus_Billing__Invoice__c/fields/ShipToXref_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>ShipToXref_SAP_Number__c</fullName>
    <formula>Order_record__r.ShipToXref__r.External_Account_ID__c</formula>
    <label>ShipToXref SAP Number</label>
    <type>Text</type>
</CustomField>