src/objects/Apttus_Billing__Invoice__c/fields/SoldTo_Number__c.field-meta.xml
<CustomField>
    <fullName>SoldTo_Number__c</fullName>
    <label>SoldTo Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>