src/objects/Apttus_Billing__Invoice__c/fields/SoldToXref_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>SoldToXref_SAP_Number__c</fullName>
    <formula>Order_record__r.SoldToXref__r.External_Account_ID__c</formula>
    <label>SoldToXref SAP Number</label>
    <type>Text</type>
</CustomField>