src/objects/Apttus_Billing__Invoice__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <label>ValidTo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>