src/objects/Apttus_Billing__Invoice__c/listViews/Apttus_Billing__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Billing__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Billing__InvoiceDate__c</columns>
    <columns>APTS_DMR_Number__c</columns>
    <columns>APTS_SAP_Invoice_Number__c</columns>
    <columns>Apttus_Billing__DeliveryStatus__c</columns>
    <columns>Apttus_Billing__Status__c</columns>
    <columns>APTS_Invoice_Description__c</columns>
    <columns>Apttus_Billing__PONumber__c</columns>
    <columns>Apttus_Billing__BillToAccountId__c</columns>
    <columns>Apttus_Billing__ShipToAccountId__c</columns>
    <columns>Apttus_Billing__InvoiceRunResultId__c</columns>
    <columns>Apttus_Billing__TotalInvoiceAmount__c</columns>
    <columns>Apttus_Billing__TotalTaxAmount__c</columns>
    <columns>APTS_Integration_Method__c</columns>
    <columns>APTS_Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus_Billing__TotalInvoiceAmount__c</field>
        <operation>notEqual</operation>
        <value>USD 0</value>
    </filters>
    <label>All</label>
</ListView>