src/objects/Apttus_Billing__Invoice__c/listViews/Draft_Invoices.listView-meta.xml
<ListView>
    <fullName>Draft_Invoices</fullName>
    <columns>APTS_Apttus_Reference_Number__c</columns>
    <columns>Apttus_Billing__BillToAccountId__c</columns>
    <columns>Apttus_Billing__Status__c</columns>
    <columns>Apttus_Billing__PaymentTermId__c</columns>
    <columns>Apttus_Billing__InvoiceDate__c</columns>
    <columns>Apttus_Billing__TotalInvoiceAmount__c</columns>
    <columns>Apttus_Billing__TotalFeeAmount__c</columns>
    <columns>Apttus_Billing__TotalTaxAmount__c</columns>
    <columns>Apttus_Billing__InvoiceRunResultId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus_Billing__Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Invoices</label>
    <language>en_US</language>
</ListView>